feat(core): добавить учет plugin replicas
